welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: ')' expected but '<-' found.
	while(i<-7){
               ^Program:19: error: ';' expected but 'false' found.
while(haveBaggle()== false){
                     ^